# mlops

./: .gitignore  Makefile  README.md  TODO.md  docker-compose.yml  env.example  pyproject.toml
.github/workflows/: cd.yml  ci.yml
dags/: predict_dag.py  retrain_dag.py
data/: dataset.csv
docker/: Dockerfile.airflow  Dockerfile.api  Dockerfile.frontend  Dockerfile.train
frontend/: app.py
mlproject/: config.py  train.py
models/: model.joblib
scripts/: predict_client.py
src/bank_marketing/: api.py  config.py  data.py  db.py  evaluate.py  evaluation.py  features.py  prepare_data.py  tracking.py  train.py  train_models.py  train_optuna.py
tests/: conftest.py  test_api.py  test_data.py  test_model.py
