# ==============================================================================
# Projet fil rouge MLOps - manifeste de dependances (structure aplatie)
# ==============================================================================
# Le package `mlproject` n'est PAS installe comme paquet : il est rendu
# importable via PYTHONPATH (`.` en local via le Makefile, `/app` dans Docker).
# Ce pyproject sert donc uniquement a declarer les DEPENDANCES. C'est ce qui
# permet a `pip install .` (Dockerfiles) de s'executer AVANT meme que le code
# source ne soit copie, pour profiter du cache de couches Docker.
# ==============================================================================

[project]
name = "mlproject"
version = "0.1.0"
description = "Pipeline MLOps de classification binaire (fil rouge Bank Marketing)"
requires-python = ">=3.13"
dependencies = [
  # Donnees & ML
  "scikit-learn>=1.4",
  "pandas>=2.0",
  "numpy>=2.0,<2.3",        # borne haute : compat numba/llvmlite sur Python 3.13
  "joblib>=1.3",
  "xgboost>=2.0",
  "lightgbm>=4.3",
  "numba>=0.61",
  "llvmlite>=0.44",
  # Suivi d'experiences & optimisation
  "mlflow>=2.12",
  "optuna>=3.6",
  # Explicabilite & visualisation
  "shap>=0.45",
  "matplotlib>=3.8",
  # API & frontend
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "streamlit>=1.30",
  "httpx>=0.27",
  # Journal de predictions / utilitaires
  "sqlalchemy>=2.0",
  "pymysql>=1.1",
  "dill>=0.3.9",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "ruff", "mypy"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Le package est fourni via PYTHONPATH, pas installe : distribution sans module
# (seules les dependances ci-dessus sont installees par `pip install .`).
[tool.setuptools]
packages = []
py-modules = []

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"

# Le stack scientifique ne fournit pas de stubs de types : on ignore les
# imports non types pour ces librairies, tout en gardant mypy strict sur mlproject.
[[tool.mypy.overrides]]
module = [
  "sklearn.*",
  "pandas.*",
  "joblib.*",
  "mlflow.*",
  "optuna.*",
  "shap.*",
  "xgboost.*",
  "lightgbm.*",
  "streamlit.*",
  "pymysql.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
